# squire

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/commands/: squire-pr-review.md
claude-skills/squire-pr-review/: squire-pr-review.md
claude-skills/squire-pr-review/agents/: openai.yaml
docs/: design.md  work-plan.md
docs/guide/: 01-environment.md  02-run-server-web.md  03-cli-commands.md  04-cli-global-setup.md  05-skill-guide.md  README.md
scripts/: install-squire-tool.sh  squire.sh
skills/: README.md
skills/claude-code/squire-pr-review/: squire-pr-review.md
skills/codex/squire-pr-review/: SKILL.md
skills/codex/squire-pr-review/references/: commands.md
skills/squire-pr-review/: SKILL.md
skills/squire-pr-review/scripts/: install_squire_cli.sh
squire-client/: README.md  index.html  package-lock.json  package.json
squire-client/src/: App.css  App.tsx  api.ts  index.css
squire-engine/: .env.sample  README.md  main.py  pyproject.toml
squire-engine/src/squire/: __init__.py  api.py  cli.py  config.py  db.py  github.py  keychain.py  review_comments.py  review_threads.py  sync.py
squire-engine/tests/: test_comment_reactions.py  test_create_pull_request.py  test_review_publish_local.py  test_review_threads_cli.py
